basic input and echo

--- a/electron/src/index.css
+++ b/electron/src/index.css
@@ -1,7 +1,17 @@
 body {
+  background-color: black;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
+}
+
+#editor {
+  display: block;
+  height: 75vh;
+  margin: auto;
+  outline: solid white;
+  width: 50vw;
 }
