--- a/electron/src/index.css
+++ b/electron/src/index.css
@@ -1,17 +1,47 @@
+// https://colorhunt.co/palette/27374d526d829db2bfdde6ed
+// #27374D rgb(39, 55, 77)
+// #526D82 rgb(82, 109, 130)
+// #9DB2BF rgb(157, 178, 191)
+// #DDE6ED rgb(221, 230, 237)
+
+@font-face {
+  font-family: CommitMono; 
+  src: url('../assets/fonts/CommitMonoNerdFontMono-Regular.otf'); 
+} 
+
+@font-face {
+  font-family: NotoMono; 
+  src: url('../assets/fonts/NotoMonoNerdFontMono-Regular.ttf'); 
+} 
+
+html {
+  height: 100vh;
+}
+
 body {
-  background-color: black;
-  color: white;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  align-items: center;
+  background-color: #27374D;
+  color: #DDE6ED;
+  display: flex;
+  font-family: NotoMono;
+  font-size: 1rem;
+  height: 100%;
+  justify-content: center;
+  line-height: 1;
+  margin: 0px;
 }
 
 #editor {
   display: block;
-  height: 75vh;
-  margin: auto;
-  outline: solid white;
-  width: 50vw;
+  height: calc(1rem * 24);
+  outline: solid 0.25rem #526D82;
+  outline-offset: 1rem;
+  overflow-y: scroll;
+  text-wrap: wrap;
+  width: calc(1rem * 48);
 }
+
+.text-line {
+
+}
+
