--- a/electron/src/index.css
+++ b/electron/src/index.css
@@ -21,6 +21,7 @@ html {
 body {
   align-items: center;
   background-color: #27374D;
+  background-color: #0d1117;
   color: #DDE6ED;
   display: flex;
   font-family: NotoMono;
@@ -34,14 +35,15 @@ body {
 #editor {
   display: block;
   height: calc(1rem * 24);
-  outline: solid 0.25rem #526D82;
+  outline: solid 2px #526D82;
+  outline-color: #8d96a0;
+  outline-color: #8b949e;
   outline-offset: 1rem;
-  overflow-y: scroll;
-  text-wrap: wrap;
   width: calc(1rem * 48);
 }
 
-.text-line {
-
+#paragraph {
+  text-wrap: wrap;
+  word-break: break-all;
 }
 
