--- a/electron/src/index.css
+++ b/electron/src/index.css
@@ -19,15 +19,14 @@ html {
 }
 
 body {
-  align-items: center;
   background-color: #27374D;
   background-color: #0d1117;
   color: #DDE6ED;
-  display: flex;
+  display: grid;
   font-family: NotoMono;
   font-size: 1rem;
+  gap: 1rem;
   height: 100%;
-  justify-content: center;
   line-height: 1;
   margin: 0px;
 }
@@ -35,15 +34,27 @@ body {
 #editor {
   display: block;
   height: calc(1rem * 24);
-  outline: solid 2px #526D82;
-  outline-color: #8d96a0;
-  outline-color: #8b949e;
-  outline-offset: 1rem;
+  place-self: center;
   width: calc(1rem * 48);
 }
 
 #paragraph {
   text-wrap: wrap;
   word-break: break-all;
+}
+
+#status-line {
+  align-self: end;
+  align-items: center;
+  display: flex;
+  height: 2rem;
+  justify-self: center;
+  margin-bottom: 2rem;
+  width: 80%;
+}
+
+.outline {
+  outline: solid 2px #526D82;
+  outline-offset: 1rem;
 }
 
